--- a/.env
+++ b/.env
@@ -7,11 +7,5 @@
 DATABASE_URL="postgresql://postgres:secret@localhost:5432/khonhai?schema=public"
 
 # Secret for signing JWTs and other tokens for authorization purposes
-AUTH_SECRET="authsecret"
+# AUTH_SECRET="authsecret"
 PORT=8000
-
-// .env
-KUDOS_ACCESS_KEY_ID="<access key ID>"
-KUDOS_SECRET_ACCESS_KEY="<secret key>"
-KUDOS_BUCKET_NAME="<s3 bucket name>"
-KUDOS_BUCKET_REGION="<s3 bucket region>"
