--- a/package.json
+++ b/package.json
@@ -4,26 +4,44 @@
   "description": "",
   "main": "index.js",
   "scripts": {
+    "start": "nodemon",
+    "build": "npx tsc",
+    "prisma": "npx prisma generate",
+    "migrate": "npx prisma migrate dev",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@aws-sdk/client-s3": "^3.374.0",
+    "@aws-sdk/s3-request-presigner": "^3.375.0",
     "@prisma/client": "4.16.1",
+    "aws-sdk": "^2.1095.0",
     "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
+    "express-session": "^1.17.3",
     "jsonwebtoken": "^9.0.0",
-    "redis": "^4.6.7"
+    "multer": "^1.4.4",
+    "redis": "^4.6.7",
+    "sharp": "^0.32.4"
   },
   "devDependencies": {
     "@types/bcryptjs": "^2.4.2",
+    "@types/cors": "^2.8.12",
     "@types/express": "^4.17.17",
+    "@types/express-session": "^1.17.7",
+    "@types/jest": "^29.5.2",
     "@types/jsonwebtoken": "^9.0.2",
+    "@types/multer": "^1.4.7",
     "@types/node": "^20.3.2",
-    "prisma": "^4.16.1",
+    "jest": "^29.6.1",
+    "nodemon": "^2.0.15",
+    "prisma": "^4.16.2",
+    "ts-jest": "^29.1.1",
+    "ts-node": "^10.7.0",
     "typescript": "^5.1.3"
   }
 }
