change token name

--- a/.env
+++ b/.env
@@ -5,6 +5,7 @@
 # See the documentation for all the connection string options: https://pris.ly/d/connection-strings
 
 DATABASE_URL="postgresql://postgres:secret@localhost:5432/khonhai?schema=public"
+REDIS_URL="redis://redis:6379"
 
 # Secret for signing JWTs and other tokens for authorization purposes
 # AUTH_SECRET="authsecret"
