--- a/.github/workflows/docker.yaml
+++ b/.github/workflows/docker.yaml
@@ -27,7 +27,7 @@ jobs:
         uses: docker/login-action@v2
         with:
           username: ${{ secrets.DOCKERHUB_USERNAME }}
-          password: ${{ secrets.DOCKERHUB_TOKEN_GITHUB_ACTION }}
+          password: ${{ secrets.DOCKERHUB_TOKEN }}
       - name: Build and push Docker image
         uses: docker/build-push-action@v4
         with:
@@ -37,5 +37,5 @@ jobs:
             FROM_REPO=${{ github.repositoryUrl }}
             APP_VERSION=${{ github.ref_name }}
           tags: |
-            ${{ secrets.DOCKERHUB_USERNAME }}/image_khonhai:${{ github.ref_name }}
-            ${{ secrets.DOCKERHUB_USERNAME }}/image_khonhai:latest
+            ${{ secrets.DOCKERHUB_USERNAME }}/nodejs-cicd:${{ github.ref_name }}
+            ${{ secrets.DOCKERHUB_USERNAME }}/nodejs-cicd:latest
